amend project structure
Emit ES5 from tsc; was trying to use ES6 + asyncawait using tsc nightlies but too much trouble in VS code (eg no intellisense).
Revisit this when TSC1.7 is officially out and supported by an upcoming VS Code version.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
 	"version": "0.1.0",
 	"command": "npm",
 	"isShellCommand": true,
-	"showOutput": "silent",
+	"showOutput": "always",
 	"args": ["run", "build"],
 	"problemMatcher": "$tsc"
 }
