--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/index",
   "typings": "src/index.ts",
   "scripts": {
-    "build": "tsc -p . && pegjs src/route-pattern-dsl.peg",
+    "build": "tsc",
     "prepublish": "npm run build",
     "test": "node ./scripts/runTestSuite"
   },
