--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "mocha": "^2.2.5",
-    "typescript": "^1.7.3"
+    "typescript": "1.8.0-dev.20160119"
   }
 }
