--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "tsc",
     "prepublish": "npm run build",
-    "test": "node ./scripts/runTestSuite"
+    "test": "node ./dev/npm-scripts/run-mocha-tests",
+    "perf": "node ./dev/npm-scripts/run-perf-tests"
   },
   "repository": {
     "type": "git",
