--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "routist",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "routist",
   "readmeFilename": "README.md",
   "main": "src/index",
   "typings": "src/index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && pegjs src/pattern/pattern-source-grammar.peg",
     "prepublish": "npm run build",
     "test": "node ./dev/npm-scripts/run-mocha-tests",
     "perf": "node ./dev/npm-scripts/run-perf-tests"
@@ -31,11 +31,11 @@
   },
   "homepage": "https://github.com/yortus/routist#readme",
   "dependencies": {
-    "pegjs": "^0.9.0"
   },
   "devDependencies": {
     "chai": "^3.2.0",
     "mocha": "^2.2.5",
+    "pegjs": "^0.9.0",
     "typescript": "^1.9.0-dev.20160217"
   }
 }
