--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "typings": "src/index.ts",
   "scripts": {
     "build": "tsc && pegjs src/pattern/pattern-source-grammar.peg",
+    "clean": "rimraf src/**/*.js src/**/*.js.map",
     "prepublish": "npm run build",
     "test": "node ./dev/npm-scripts/run-mocha-tests",
     "perf": "node ./dev/npm-scripts/run-perf-tests"
@@ -30,12 +31,12 @@
     "url": "https://github.com/yortus/routist/issues"
   },
   "homepage": "https://github.com/yortus/routist#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "^3.2.0",
     "mocha": "^2.2.5",
     "pegjs": "^0.9.0",
+    "rimraf": "^2.5.2",
     "typescript": "^1.9.0-dev.20160217"
   }
 }
