--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "routist",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "routist",
   "readmeFilename": "README.md",
   "main": "src/index",
   "typings": "src/index.ts",
   "scripts": {
-    "build": "tsc && pegjs src/pattern/pattern-source-grammar.peg",
-    "clean": "rimraf src/**/*.js src/**/*.js.map",
+    "build": "npm run build-ts && npm run build-peg && npm run make-dist",
+    "clean": "rimraf built/ dist/",
     "prepublish": "npm run build",
     "test": "node ./dev/npm-scripts/run-mocha-tests",
-    "perf": "node ./dev/npm-scripts/run-perf-tests"
+    "perf": "node ./dev/npm-scripts/run-perf-tests",
+
+    "build-ts": "tsc",
+    "build-peg": "pegjs src/pattern/pattern-source-grammar.peg built/src/pattern/pattern-source-grammar.js",
+    "make-dist": "ncp built/src dist"
   },
   "repository": {
     "type": "git",
@@ -35,6 +39,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "mocha": "^2.2.5",
+    "ncp": "^2.0.0",
     "pegjs": "^0.9.0",
     "rimraf": "^2.5.2",
     "typescript": "^1.9.0-dev.20160224"
