--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,7 @@
 		"**/.git": true,
 		"**/.DS_Store": true,
         "**/*.njsproj": true,
-        "**/*.sln": true,
-        "**/*.js": { "when": "$(basename).ts" },
-        "**/*.js.map": { "when": "$(basename)" }
+        "**/*.sln": true
 	},
 
 	// Specifies the folder path containing the tsserver and lib*.d.ts files to use.
