--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "main": "built/index.js",
   "typings": "built/index.d.ts",
   "scripts": {
-    "build": "npm run build-ts && npm run build-peg",
+    "build": "tsc -p src && tsc -p test && pegjs src/pattern/pattern-source-grammar.peg built/pattern/pattern-source-grammar.js",
     "clean": "rimraf built/",
     "prepublish": "npm run self-ref && npm run build",
     "test": "node ./scripts/run-mocha-tests",
     "perf": "node ./scripts/run-perf-tests",
-    "build-ts": "tsc -p src && tsc -p test",
-    "build-peg": "pegjs src/pattern/pattern-source-grammar.peg built/pattern/pattern-source-grammar.js",
     "self-ref": "node ./scripts/enable-self-reference"
   },
   "repository": {
