--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+	// Columns at which to show vertical rulers
+	"editor.rulers": [120],
+
 	// Configure glob patterns for excluding files and folders.
 	"files.exclude": {
         "node_modules": true,
