--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash": "^4.6.1",
     "mkdirp": "^0.5.1",
     "node-static": "^0.7.7",
+    "stack-trace": "0.0.9",
     "type-is": "^1.6.12"
   },
   "devDependencies": {
