--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "routist",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "description": "routist",
   "readmeFilename": "README.md",
-  "main": "built/index.js",
-  "typings": "built/index.d.ts",
+  "main": "dist/lib/index.js",
+  "typings": "dist/lib/index.d.ts",
   "scripts": {
-    "build": "tsc -p src && tsc -p test && pegjs src/pattern/pattern-source-grammar.peg built/pattern/pattern-source-grammar.js",
-    "clean": "rimraf built/",
+    "build": "tsc -p src && tsc -p test",
+    "clean": "rimraf dist/",
     "prepublish": "npm run self-ref && npm run build",
     "test": "node ./scripts/run-unit-tests",
-    "perf": "node ./scripts/run-perf-tests",
     "self-ref": "node ./scripts/enable-self-reference"
   },
   "repository": {
@@ -32,13 +31,27 @@
     "url": "https://github.com/yortus/routist/issues"
   },
   "homepage": "https://github.com/yortus/routist#readme",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.16.1",
+    "compression": "^1.6.2",
+    "express": "^4.14.1",
+    "express-session": "^1.15.1",
+    "httperr": "^1.0.0",
+    "multimethods": "^0.2.10",
+    "serve-static": "^1.12.1",
+    "session-file-store": "^1.0.0"
+  },
   "devDependencies": {
-    "asyncawait": "^1.0.3",
-    "chai": "^3.2.0",
-    "mocha": "^2.2.5",
-    "pegjs": "^0.9.0",
-    "rimraf": "^2.5.2",
-    "typescript": "^1.9.0-dev.20160224"
+    "@types/body-parser": "0.0.34",
+    "@types/chai": "^4.0.0",
+    "@types/express": "^4.0.35",
+    "@types/express-session": "0.0.32",
+    "@types/httperr": "^1.0.29",
+    "@types/knex": "0.0.43",
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^7.0.23",
+    "@types/serve-static": "^1.7.31",
+    "rimraf": "^2.6.1",
+    "typescript": "^2.4.0-dev.20170601"
   }
 }
