--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
   "homepage": "https://github.com/yortus/routist#readme",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "chai": "^4.0.1",
     "compression": "^1.6.2",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "httperr": "^1.0.0",
+    "mocha": "^3.4.2",
     "multimethods": "^0.2.10",
     "serve-static": "^1.12.1",
     "session-file-store": "^1.0.0"
