--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.2.2",
   "description": "routist",
   "readmeFilename": "README.md",
-  "main": "dist/lib/index.js",
-  "typings": "dist/lib/index.d.ts",
+  "main": "dist/release/index.js",
+  "typings": "dist/release/index.d.ts",
   "scripts": {
-    "prepare": "node ./scripts/enable-self-reference && npm run build",
     "build": "tsc -p src && tsc -p test && tsc -p extras",
     "clean": "rimraf dist/",
     "test": "node ./scripts/run-unit-tests",
-    "toy": "node ./dist/extras/toy-server.js"
+    "prepare": "npm run self-ref && npm run build",
+    "self-ref": "node ./scripts/enable-self-reference",
+    "demo": "node ./dist/extras/demo-server"
   },
   "repository": {
     "type": "git",
@@ -40,7 +41,7 @@
     "express-session": "^1.15.1",
     "httperr": "^1.0.0",
     "mocha": "^3.4.2",
-    "multimethods": "^0.2.10",
+    "multimethods": "^0.2.12",
     "serve-static": "^1.12.1",
     "session-file-store": "^1.0.0"
   },
@@ -57,6 +58,6 @@
     "@types/serve-static": "^1.7.31",
     "@types/session-file-store": "^1.0.1",
     "rimraf": "^2.6.1",
-    "typescript": "^2.4.0-dev.20170601"
+    "typescript": "^2.4.0"
   }
 }
