add stack-trace types

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/node": "^7.0.23",
     "@types/serve-static": "^1.7.31",
     "@types/session-file-store": "^1.0.1",
+    "@types/stack-trace": "0.0.28",
     "rimraf": "^2.6.1",
     "typescript": "^2.5.0-dev.20170621"
   }
