--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "node ./scripts/run-unit-tests",
     "prepare": "npm run self-ref && npm run build",
     "self-ref": "node ./scripts/enable-self-reference",
-    "demo": "cross-env DEBUG=routist,multimethods node ./dist/extras/demo-server"
+    "demo": "node ./dist/extras/demo-server",
+    "demo:debug": "cross-env DEBUG=routist,multimethods node ./dist/extras/demo-server"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,7 @@
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "httperr": "^1.0.0",
+    "json-refs": "^3.0.0",
     "mocha": "^3.4.2",
     "multimethods": "^0.8.0",
     "node-machine-id": "^1.1.9",
