update typescript to 2.6.1

--- a/extras/tsconfig.json
+++ b/extras/tsconfig.json
@@ -19,6 +19,7 @@
         "noImplicitUseStrict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "strictFunctionTypes": true
     }
 }
