--- a/package.json
+++ b/package.json
@@ -67,6 +67,6 @@
     "cross-env": "^5.0.1",
     "rimraf": "^2.6.1",
     "tslint": "^5.5.0",
-    "typescript": "^2.6.0-dev.20171011"
+    "typescript": "^2.6.1"
   }
 }
