--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mocha": "^3.4.2",
     "multimethods": "^0.8.2",
     "node-machine-id": "^1.1.9",
+    "serve-favicon": "^2.4.5",
     "serve-static": "^1.12.1",
     "session-file-store": "^1.0.0",
     "stack-trace": "0.0.10"
@@ -61,6 +62,7 @@
     "@types/knex": "0.0.43",
     "@types/mocha": "^2.2.41",
     "@types/node": "^7.0.23",
+    "@types/serve-favicon": "^2.2.29",
     "@types/serve-static": "^1.7.31",
     "@types/session-file-store": "^1.0.1",
     "@types/stack-trace": "0.0.28",
