--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "express": "^4.14.1",
     "express-session": "^1.15.1",
     "httperr": "^1.0.0",
+    "joi": "^13.0.2",
     "json-refs": "^3.0.0",
     "mocha": "^3.4.2",
     "multimethods": "^0.8.3",
     "node-machine-id": "^1.1.9",
+    "pkg-dir": "^2.0.0",
     "serve-favicon": "^2.4.5",
     "serve-static": "^1.12.1",
     "session-file-store": "^1.0.0",
@@ -59,6 +61,7 @@
     "@types/express": "^4.0.35",
     "@types/express-session": "0.0.32",
     "@types/httperr": "^1.0.29",
+    "@types/joi": "^13.0.0",
     "@types/knex": "0.0.43",
     "@types/mocha": "^2.2.41",
     "@types/node": "^7.0.23",
