--- a/package.json
+++ b/package.json
@@ -72,6 +72,6 @@
     "cross-env": "^5.0.1",
     "rimraf": "^2.6.1",
     "tslint": "^5.5.0",
-    "typescript": "^2.6.1"
+    "typescript": "^2.7.0-dev.20171118"
   }
 }
