--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
   },
   "homepage": "https://github.com/yortus/routist#readme",
   "dependencies": {
+    "@types/express": "^4.0.35",
     "body-parser": "^1.16.1",
     "chai": "^4.0.1",
     "compression": "^1.6.2",
+    "connect-loki": "^1.1.0",
     "debug": "^2.6.8",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
@@ -48,9 +50,7 @@
     "multimethods": "^0.8.4",
     "node-machine-id": "^1.1.9",
     "serve-static": "^1.12.1",
-    "session-file-store": "^1.0.0",
-    "stack-trace": "0.0.10",
-    "@types/express": "^4.0.35"
+    "stack-trace": "0.0.10"
   },
   "devDependencies": {
     "@types/body-parser": "0.0.34",
@@ -64,7 +64,6 @@
     "@types/mocha": "^2.2.41",
     "@types/node": "^7.0.23",
     "@types/serve-static": "^1.7.31",
-    "@types/session-file-store": "^1.0.1",
     "@types/stack-trace": "0.0.28",
     "cross-env": "^5.0.1",
     "rimraf": "^2.6.1",
