--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
 	// Configure glob patterns for excluding files and folders.
 	"files.exclude": {
         "node_modules": true,
-		"dist": true,
+		"Xdist": true,
 		"**/.git": true,
 		"**/.DS_Store": true,
         "**/*.njsproj": true,
