--- a/package.json
+++ b/package.json
@@ -35,37 +35,37 @@
   },
   "homepage": "https://github.com/yortus/routist#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "compression": "^1.7.3",
-    "debug": "^3.1.0",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "debug": "^3.2.6",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "httperr": "^1.0.0",
-    "joi": "^13.4.0",
-    "json-refs": "^3.0.12",
+    "joi": "^13.7.0",
+    "json-refs": "^3.0.13",
     "multimethods": "^0.8.7",
-    "serve-static": "^1.13.2",
+    "serve-static": "^1.14.1",
     "stack-trace": "0.0.10"
   },
   "devDependencies": {
     "@types/body-parser": "0.0.34",
-    "@types/chai": "^4.1.4",
+    "@types/chai": "^4.1.7",
     "@types/compression": "0.0.33",
     "@types/debug": "0.0.29",
-    "@types/express": "^4.0.35",
+    "@types/express": "^4.17.0",
     "@types/express-session": "0.0.32",
     "@types/httperr": "^1.0.29",
-    "@types/joi": "^13.0.0",
+    "@types/joi": "^13.6.3",
     "@types/knex": "0.0.43",
-    "@types/mocha": "^5.2.2",
-    "@types/node": "^7.0.23",
-    "@types/serve-static": "^1.7.31",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^7.10.7",
+    "@types/serve-static": "^1.13.2",
     "@types/stack-trace": "0.0.28",
-    "chai": "^4.1.2",
-    "cross-env": "^5.0.1",
+    "chai": "^4.2.0",
+    "cross-env": "^5.2.0",
     "mocha": "^5.2.0",
-    "rimraf": "^2.6.1",
-    "tslint": "^5.10.0",
-    "typescript": "^2.9.0-dev.20180519"
+    "rimraf": "^2.6.3",
+    "tslint": "^5.18.0",
+    "typescript": "^2.9.2"
   }
 }
